--- a/code/GNN_Molecule_Data.ipynb
+++ b/code/GNN_Molecule_Data.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "GNN-Molecule_Data.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM5/MH0iN4eAPw3Ao6RJGxo",
+      "authorship_tag": "ABX9TyOjYqN92Hdy0OTe2QkwEx6/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,15 +29,412 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "## Installation of Pytorch and RDKit"
+      ],
       "metadata": {
-        "id": "4dETM8oG3_kU"
+        "id": "JCrcAmri-ULy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "4dETM8oG3_kU",
+        "outputId": "2c278971-3384-4b19-eb13-b0a26256c2e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.10.0+cu111\n",
+            "11.1\n",
+            "Python 3.7.12\n",
+            "Thu Dec 16 07:46:59 2021       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 495.44       Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla K80           Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   72C    P8    34W / 149W |      0MiB / 11441MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Check pytorch version and make sure you use a GPU Kernel\n",
+        "!python -c \"import torch; print(torch.__version__)\"\n",
+        "!python -c \"import torch; print(torch.version.cuda)\"\n",
+        "!python --version\n",
+        "!nvidia-smi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title\n",
+        "# Install rdkit\n",
+        "import sys\n",
+        "import os\n",
+        "import requests\n",
+        "import subprocess\n",
+        "import shutil\n",
+        "from logging import getLogger, StreamHandler, INFO\n",
+        " \n",
+        " \n",
+        "logger = getLogger(__name__)\n",
+        "logger.addHandler(StreamHandler())\n",
+        "logger.setLevel(INFO)\n",
+        " \n",
+        " \n",
+        "def install(\n",
+        "        chunk_size=4096,\n",
+        "        file_name=\"Miniconda3-latest-Linux-x86_64.sh\",\n",
+        "        url_base=\"https://repo.continuum.io/miniconda/\",\n",
+        "        conda_path=os.path.expanduser(os.path.join(\"~\", \"miniconda\")),\n",
+        "        rdkit_version=None,\n",
+        "        add_python_path=True,\n",
+        "        force=False):\n",
+        "    \"\"\"install rdkit from miniconda\n",
+        "    ```\n",
+        "    import rdkit_installer\n",
+        "    rdkit_installer.install()\n",
+        "    ```\n",
+        "    \"\"\"\n",
+        " \n",
+        "    python_path = os.path.join(\n",
+        "        conda_path,\n",
+        "        \"lib\",\n",
+        "        \"python{0}.{1}\".format(*sys.version_info),\n",
+        "        \"site-packages\",\n",
+        "    )\n",
+        " \n",
+        "    if add_python_path and python_path not in sys.path:\n",
+        "        logger.info(\"add {} to PYTHONPATH\".format(python_path))\n",
+        "        sys.path.append(python_path)\n",
+        " \n",
+        "    if os.path.isdir(os.path.join(python_path, \"rdkit\")):\n",
+        "        logger.info(\"rdkit is already installed\")\n",
+        "        if not force:\n",
+        "            return\n",
+        " \n",
+        "        logger.info(\"force re-install\")\n",
+        " \n",
+        "    url = url_base + file_name\n",
+        "    python_version = \"{0}.{1}.{2}\".format(*sys.version_info)\n",
+        " \n",
+        "    logger.info(\"python version: {}\".format(python_version))\n",
+        " \n",
+        "    if os.path.isdir(conda_path):\n",
+        "        logger.warning(\"remove current miniconda\")\n",
+        "        shutil.rmtree(conda_path)\n",
+        "    elif os.path.isfile(conda_path):\n",
+        "        logger.warning(\"remove {}\".format(conda_path))\n",
+        "        os.remove(conda_path)\n",
+        " \n",
+        "    logger.info('fetching installer from {}'.format(url))\n",
+        "    res = requests.get(url, stream=True)\n",
+        "    res.raise_for_status()\n",
+        "    with open(file_name, 'wb') as f:\n",
+        "        for chunk in res.iter_content(chunk_size):\n",
+        "            f.write(chunk)\n",
+        "    logger.info('done')\n",
+        " \n",
+        "    logger.info('installing miniconda to {}'.format(conda_path))\n",
+        "    subprocess.check_call([\"bash\", file_name, \"-b\", \"-p\", conda_path])\n",
+        "    logger.info('done')\n",
+        " \n",
+        "    logger.info(\"installing rdkit\")\n",
+        "    subprocess.check_call([\n",
+        "        os.path.join(conda_path, \"bin\", \"conda\"),\n",
+        "        \"install\",\n",
+        "        \"--yes\",\n",
+        "        \"-c\", \"rdkit\",\n",
+        "        \"python==3.7.3\",\n",
+        "        \"rdkit\" if rdkit_version is None else \"rdkit=={}\".format(rdkit_version)])\n",
+        "    logger.info(\"done\")\n",
+        " \n",
+        "    import rdkit\n",
+        "    logger.info(\"rdkit-{} installation finished!\".format(rdkit.__version__))\n",
+        " \n",
+        " \n",
+        "if __name__ == \"__main__\":\n",
+        "    install()"
+      ],
+      "metadata": {
+        "id": "zRzvnzwZ-M80",
+        "outputId": "59837f91-3a8d-472e-fea6-9f9b30a4f611",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "add /root/miniconda/lib/python3.7/site-packages to PYTHONPATH\n",
+            "python version: 3.7.12\n",
+            "fetching installer from https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
+            "done\n",
+            "installing miniconda to /root/miniconda\n",
+            "done\n",
+            "installing rdkit\n",
+            "done\n",
+            "rdkit-2020.09.1 installation finished!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -q torch-scatter -f https://pytorch-geometric.com/whl/torch-1.10.0+cu111.html\n",
+        "!pip install -q torch-sparse -f https://pytorch-geometric.com/whl/torch-1.10.0+cu111.html\n",
+        "!pip install -q torch-cluster -f https://pytorch-geometric.com/whl/torch-1.10.0+cu111.html\n",
+        "!pip install -q torch-geometric"
+      ],
+      "metadata": {
+        "id": "rfdaS-CmGHY7",
+        "outputId": "1f6974a8-6f3b-4952-8a0e-bb67cf0964d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 7.9 MB 4.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.5 MB 4.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.3 MB 3.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 325 kB 4.1 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 407 kB 24.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 41 kB 520 kB/s \n",
+            "\u001b[?25h  Building wheel for torch-geometric (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import rdkit\n",
+        "from torch_geometric.datasets import MoleculeNet"
+      ],
+      "metadata": {
+        "id": "eoGq0uScItNC"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exploring the Dataset"
+      ],
+      "metadata": {
+        "id": "tUPX0aNm-Tdj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = MoleculeNet(root=\".\", name=\"ESOL\")\n",
+        "data"
+      ],
+      "metadata": {
+        "id": "39n4vHz3_ku_",
+        "outputId": "46593777-10b5-46a0-9805-0a2807c1d3a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Downloading https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/delaney-processed.csv\n",
+            "Processing...\n",
+            "Done!\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ESOL(1128)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# number of features in the graph\n",
+        "data.num_features"
+      ],
+      "metadata": {
+        "id": "PbgXzkysNwsE",
+        "outputId": "749f62a1-8f66-4e4a-9c83-e051decd4004",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Target classes\n",
+        "data.num_classes"
+      ],
+      "metadata": {
+        "id": "YaEri93pO8zy",
+        "outputId": "d2333c12-c9b2-4011-fe43-a2cfcb4e56cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "734"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data[0]"
+      ],
+      "metadata": {
+        "id": "csacvX79PCSI",
+        "outputId": "bd7e80c1-f391-4c2a-bdc8-8a87687110ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Data(x=[32, 9], edge_index=[2, 68], edge_attr=[68, 3], y=[1, 1], smiles='OCC3OC(OCC2OC(OC(C#N)c1ccccc1)C(O)C(O)C2O)C(O)C(O)C3O ')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data[0].x.shape # matrix of 329"
+      ],
+      "metadata": {
+        "id": "IhyfxnNNPL1O",
+        "outputId": "d993ff47-81a2-4585-9572-eff9a975bc2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([32, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data[0].y # 1 target variable. Regression problem"
+      ],
+      "metadata": {
+        "id": "seJNsv_9PZgb",
+        "outputId": "93ba6b96-e8ec-4ad0-83ed-b77cba2ea921",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.7700]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "fkbwnt35Pbiu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
