complete basic GNN

--- a/code/GNN_Spektral.ipynb
+++ b/code/GNN_Spektral.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "GNN_Spektral.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMlD4r+nzTJGmZZGNP016bM",
+      "authorship_tag": "ABX9TyNpGweL92WrlYatA7l1J1ax",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,8 @@
         "from spektral.transforms import Degree, GCNFilter\n",
         "from tensorflow.keras.models import Model\n",
         "from tensorflow.keras.layers import Dense, Dropout\n",
-        "from spektral.layers import GCNConv, GlobalSumPool"
+        "from spektral.layers import GCNConv, GlobalSumPool\n",
+        "from spektral.data import BatchLoader"
       ],
       "metadata": {
         "id": "Sw3fo4lwA1iY"
@@ -654,12 +655,12 @@
     {
       "cell_type": "code",
       "source": [
-        "model.compile(loss='categorical_crossentropy',optimizer='adam')"
+        "model.compile(loss='categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
       "metadata": {
         "id": "9eBQtKbdK1TS"
       },
-      "execution_count": 41,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -674,10 +675,73 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "loader = BatchLoader(dataset, batch_size=32)"
       ],
       "metadata": {
         "id": "v5MFN6I3LOj3"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(loader.load(), steps_per_epoch=loader.steps_per_epoch, epochs=10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XobhuJBATR-z",
+        "outputId": "672575a0-d335-41d8-b1bb-d0e5ba3b5f21"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "35/35 [==============================] - 2s 35ms/step - loss: 4.0378 - accuracy: 0.6256\n",
+            "Epoch 2/10\n",
+            "35/35 [==============================] - 1s 35ms/step - loss: 4.3650 - accuracy: 0.6436\n",
+            "Epoch 3/10\n",
+            "35/35 [==============================] - 1s 31ms/step - loss: 3.7426 - accuracy: 0.6274\n",
+            "Epoch 4/10\n",
+            "35/35 [==============================] - 1s 31ms/step - loss: 3.7656 - accuracy: 0.6130\n",
+            "Epoch 5/10\n",
+            "35/35 [==============================] - 1s 24ms/step - loss: 3.7289 - accuracy: 0.6337\n",
+            "Epoch 6/10\n",
+            "35/35 [==============================] - 1s 24ms/step - loss: 3.8771 - accuracy: 0.6139\n",
+            "Epoch 7/10\n",
+            "35/35 [==============================] - 1s 26ms/step - loss: 3.5794 - accuracy: 0.6292\n",
+            "Epoch 8/10\n",
+            "35/35 [==============================] - 1s 24ms/step - loss: 3.0536 - accuracy: 0.6238\n",
+            "Epoch 9/10\n",
+            "35/35 [==============================] - 1s 24ms/step - loss: 3.0806 - accuracy: 0.6283\n",
+            "Epoch 10/10\n",
+            "35/35 [==============================] - 1s 25ms/step - loss: 2.9000 - accuracy: 0.6445\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f93c1a0f190>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "XUHj9SHITUNm"
       },
       "execution_count": null,
       "outputs": []
