test ensemble for 500 epoch model

--- a/hiv-project/ensemble_gnn.ipynb
+++ b/hiv-project/ensemble_gnn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ensemble_gnn",
       "provenance": [],
-      "authorship_tag": "ABX9TyOyulQATGWHEXC6Rwtelr4x",
+      "authorship_tag": "ABX9TyOoZTqIcwf81Rm5rslWuW5f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,20 +29,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dJNCngRtQqNx",
-        "outputId": "5c26e41f-aecc-4305-bc15-d618740c86d0"
+        "outputId": "571a0c25-515c-4afd-a2d9-83844dff31a5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -148,16 +148,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHVD0K4bQw0Y",
-        "outputId": "f0d04157-2dbe-490c-8d2e-ed8101d2d200"
+        "outputId": "3a5e8956-5279-4fa3-cd50-42df1710a51e"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "add /root/miniconda/lib/python3.7/site-packages to PYTHONPATH\n",
-            "rdkit is already installed\n"
+            "python version: 3.7.12\n",
+            "fetching installer from https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
+            "done\n",
+            "installing miniconda to /root/miniconda\n",
+            "done\n",
+            "installing rdkit\n",
+            "done\n",
+            "rdkit-2020.09.1 installation finished!\n"
           ]
         }
       ]
@@ -171,10 +178,28 @@
         "! pip install -q torch-geometric"
       ],
       "metadata": {
-        "id": "QQrpkHW2Qzxi"
+        "id": "QQrpkHW2Qzxi",
+        "outputId": "b3d56155-097d-4e27-ab95-79d537a6bcaf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": 3,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 7.9 MB 3.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.5 MB 4.1 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.3 MB 4.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 370 kB 4.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 482 kB 45.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 41 kB 462 kB/s \n",
+            "\u001b[?25h  Building wheel for torch-geometric (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -365,7 +390,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0dnwE9t0RLEC",
-        "outputId": "aefdf91a-8ac0-4187-8b52-040891746962"
+        "outputId": "7879ee84-ee4d-424e-8070-93d17a54375a"
       },
       "execution_count": 6,
       "outputs": [
@@ -387,7 +412,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 71634/71634 [03:31<00:00, 337.98it/s]\n",
+            "100%|██████████| 71634/71634 [04:18<00:00, 276.74it/s]\n",
             "Done!\n",
             "Processing...\n"
           ]
@@ -403,7 +428,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 3999/3999 [00:10<00:00, 388.48it/s]\n",
+            "100%|██████████| 3999/3999 [00:13<00:00, 288.66it/s]\n",
             "Done!\n"
           ]
         }
@@ -536,7 +561,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1OQUKJPZTH8w",
-        "outputId": "81c6267c-c760-40a1-dff5-980f6fb4ac8a"
+        "outputId": "c1496a15-16b9-4028-800d-a6fc1b20baaa"
       },
       "execution_count": 11,
       "outputs": [
@@ -555,14 +580,14 @@
     {
       "cell_type": "code",
       "source": [
-        "gcn_model.load_state_dict(torch.load('/content/drive/MyDrive/GNN_HIV/models/gcn/model-hiv-350epochs.pt',map_location = torch.device('cpu')))"
+        "gcn_model.load_state_dict(torch.load('/content/drive/MyDrive/GNN_HIV/models/gcn/model-hiv-500epochs.pt',map_location = torch.device('cpu')))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CAuZN_HJTfWi",
-        "outputId": "4177f274-3120-40fb-cf21-2b5f9b52a948"
+        "outputId": "e9c41a8c-46d2-4ab5-f002-d7ceae36d42f"
       },
       "execution_count": 12,
       "outputs": [
@@ -600,7 +625,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mwmi4KPBTtoM",
-        "outputId": "7785e979-90ed-4c01-bcf6-137332723d12"
+        "outputId": "f3e30a14-6d52-4c4a-9377-d41ec732d4c6"
       },
       "execution_count": 14,
       "outputs": [
@@ -683,15 +708,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OoyS1-KOTw4x",
-        "outputId": "b04e072f-2119-44cf-d5ae-76b24ed2382c"
+        "outputId": "5d278be5-2893-4f17-ea54-b8b0bcf4d828"
       },
-      "execution_count": 25,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 16/16 [00:04<00:00,  3.42it/s]"
+            "100%|██████████| 16/16 [00:05<00:00,  2.72it/s]"
           ]
         },
         {
@@ -699,8 +724,8 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Test Loss : 1.366168551146984 \n",
-            " Test Accuracy : 0.4056014003500875\n"
+            "Test Loss : 0.7878403961658478 \n",
+            " Test Accuracy : 0.6639159789947486\n"
           ]
         },
         {
@@ -722,20 +747,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HeKULzEOWali",
-        "outputId": "114f4821-251b-467d-8a24-a198326e9220"
+        "outputId": "028e1582-ddfb-4d8d-ef75-e7b0d5f5efc7"
       },
-      "execution_count": 26,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1469, 2365],\n",
-              "       [  12,  153]])"
+              "array([[2516, 1318],\n",
+              "       [  26,  139]])"
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 18
         }
       ]
     },
@@ -749,9 +774,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "spwr1JGdX6RI",
-        "outputId": "33e05be8-b999-4886-ca18-b433c76010a9"
+        "outputId": "7dac327a-ee8a-466b-cf40-fba16c0339da"
       },
-      "execution_count": 29,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -759,12 +784,12 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.99      0.38      0.55      3834\n",
-            "           1       0.06      0.93      0.11       165\n",
+            "           0       0.99      0.66      0.79      3834\n",
+            "           1       0.10      0.84      0.17       165\n",
             "\n",
-            "    accuracy                           0.41      3999\n",
-            "   macro avg       0.53      0.66      0.33      3999\n",
-            "weighted avg       0.95      0.41      0.53      3999\n",
+            "    accuracy                           0.66      3999\n",
+            "   macro avg       0.54      0.75      0.48      3999\n",
+            "weighted avg       0.95      0.66      0.76      3999\n",
             "\n"
           ]
         }
@@ -798,15 +823,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-jf5Nv79UW7K",
-        "outputId": "34efc84b-4ac2-4c6f-a4fd-aa20d877311f"
+        "outputId": "b0798c1a-765b-4a9c-e572-f72b70e7732f"
       },
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 16/16 [02:00<00:00,  7.56s/it]"
+            "100%|██████████| 16/16 [01:42<00:00,  6.38s/it]"
           ]
         },
         {
@@ -837,9 +862,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i95b3eIaWYUN",
-        "outputId": "31427cd6-cd79-438f-b15c-631ccd064d6a"
+        "outputId": "b3a92447-7a77-4cb9-ba8a-b74226832d3a"
       },
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +875,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 21
         }
       ]
     },
@@ -864,9 +889,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9EQ9bYnrX-V_",
-        "outputId": "2281d4a0-3718-4d97-9f36-13f5b3d47827"
+        "outputId": "38c89d6a-fb40-4def-e612-19c1bf3fa692"
       },
-      "execution_count": 24,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -895,7 +920,7 @@
       "metadata": {
         "id": "SBYb52eZfeqF"
       },
-      "execution_count": 65,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -934,15 +959,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zz-MwHnVYSFL",
-        "outputId": "77ad2ede-3f44-4ac9-cfe0-8d5dc1042c26"
+        "outputId": "c8e2bc63-3534-434d-8b15-bcbdf66ae057"
       },
-      "execution_count": 76,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 16/16 [01:31<00:00,  5.73s/it]"
+            "100%|██████████| 16/16 [01:37<00:00,  6.09s/it]"
           ]
         },
         {
@@ -950,7 +975,7 @@
           "name": "stdout",
           "text": [
             "\n",
-            " Ensemble Test Accuracy : 0.7406851712928232\n"
+            " Ensemble Test Accuracy : 0.8639659914978745\n"
           ]
         },
         {
@@ -972,20 +997,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z1Ea8ZkLc3l7",
-        "outputId": "8fa797c6-2a74-4be2-ca2b-e1c96577a567"
+        "outputId": "cd411e4f-92b8-4b56-f386-73f0b25f428e"
       },
-      "execution_count": 79,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[2825, 1009],\n",
-              "       [  28,  137]])"
+              "array([[3337,  497],\n",
+              "       [  47,  118]])"
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 25
         }
       ]
     },
@@ -999,9 +1024,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GJLI80Xpi0dm",
-        "outputId": "3374a7ee-6461-4aa9-fab9-073503a805d3"
+        "outputId": "018b9bc2-e3c4-4d85-a002-bd1ad2140d3a"
       },
-      "execution_count": 81,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,12 +1034,12 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.99      0.74      0.84      3834\n",
-            "           1       0.12      0.83      0.21       165\n",
+            "           0       0.99      0.87      0.92      3834\n",
+            "           1       0.19      0.72      0.30       165\n",
             "\n",
-            "    accuracy                           0.74      3999\n",
-            "   macro avg       0.55      0.78      0.53      3999\n",
-            "weighted avg       0.95      0.74      0.82      3999\n",
+            "    accuracy                           0.86      3999\n",
+            "   macro avg       0.59      0.79      0.61      3999\n",
+            "weighted avg       0.95      0.86      0.90      3999\n",
             "\n"
           ]
         }
