--- a/hiv-project/gcn_hiv_dataset.ipynb
+++ b/hiv-project/gcn_hiv_dataset.ipynb
@@ -47,9 +47,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yx6xDvF0hRTY",
-        "outputId": "31367d53-4bff-42d8-e343-0d283370888c"
+        "outputId": "bfa1df67-9405-4ef5-fd20-7a09d971dff4"
       },
-      "execution_count": 84,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,10 +62,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "aK6l-NhwGy1a",
-        "outputId": "85ebe705-e940-47fb-a2bf-9a92300211f2",
+        "outputId": "f48195e1-91f2-48d3-9774-21ab61319187",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -191,20 +191,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "143a7f1a-2a18-4353-9a74-82d2f98ed2b8"
+        "outputId": "c8df21b0-c942-4606-d7ad-d990af01be27"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |████████████████████████████████| 7.9 MB 1.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 3.5 MB 3.6 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 2.3 MB 3.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 370 kB 4.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 482 kB 47.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 41 kB 506 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 7.9 MB 4.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.5 MB 4.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.5 MB 4.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 407 kB 4.2 MB/s \n",
             "\u001b[?25h  Building wheel for torch-geometric (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
@@ -243,7 +241,7 @@
       "metadata": {
         "id": "4sLAQ42lIC3O"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -428,7 +426,7 @@
       ],
       "metadata": {
         "id": "uKcMa7s0Oj_O",
-        "outputId": "6266f8ae-7c06-4a5a-f3c6-ff703d17c2e7",
+        "outputId": "1549c3a6-73b0-4f98-dcb6-9da94c926c0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -453,7 +451,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 71634/71634 [04:19<00:00, 276.39it/s]\n",
+            "100%|██████████| 71634/71634 [03:49<00:00, 311.62it/s]\n",
             "Done!\n",
             "Processing...\n"
           ]
@@ -469,7 +467,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 3999/3999 [00:12<00:00, 327.76it/s]\n",
+            "100%|██████████| 3999/3999 [00:10<00:00, 391.40it/s]\n",
             "Done!\n"
           ]
         }
@@ -482,7 +480,7 @@
       ],
       "metadata": {
         "id": "RZy99bJgM7aX",
-        "outputId": "4fc6ed73-10af-442b-b722-dbf3a0109f76",
+        "outputId": "cdcdc922-253e-48fa-f6a9-3ba62534d461",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -508,7 +506,7 @@
       ],
       "metadata": {
         "id": "IJsgWGSYO8Gt",
-        "outputId": "fc0c77bb-27b7-4ec6-a5ff-9c416a04f2bf",
+        "outputId": "f9770229-e1ee-4bac-a171-d7a721c54f39",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -535,7 +533,7 @@
       ],
       "metadata": {
         "id": "wIcul2l3Q5wM",
-        "outputId": "5e3161f0-0b3b-4cab-b036-9a06f4d40ec1",
+        "outputId": "8c5bb923-9620-4cea-84d3-5fbae8497131",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -561,7 +559,7 @@
       ],
       "metadata": {
         "id": "QMQeXq_tI4O4",
-        "outputId": "610011f8-acfb-44ac-dd46-2126ed10dd54",
+        "outputId": "01cc7fa0-1b41-4b40-967e-c5d3e4bb5443",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -587,7 +585,7 @@
       ],
       "metadata": {
         "id": "HxF0il3dI7xm",
-        "outputId": "3648a162-893c-48dd-a76d-2384df7843a6",
+        "outputId": "41f96185-7a79-4a6b-dbbf-f485dc9be4e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -648,7 +646,7 @@
       "metadata": {
         "id": "_vLQInH8JprC"
       },
-      "execution_count": 72,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -668,7 +666,7 @@
       "metadata": {
         "id": "_eLDKZGuf3Cm"
       },
-      "execution_count": 73,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -683,7 +681,7 @@
         "id": "PzPRKi17jk5c",
         "outputId": "42d03733-9832-4cea-fae9-4d0b97c1eaf3"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -706,7 +704,7 @@
       "cell_type": "code",
       "source": [
         "# Defining loss and optimiser \n",
-        "weights = torch.tensor([1,10],dtype=torch.float32).to('cuda')\n",
+        "weights = torch.tensor([1,10],dtype=torch.float32).to('cpu')\n",
         "loss_fn = torch.nn.CrossEntropyLoss(weight = weights)\n",
         "optimizer = torch.optim.SGD(model.parameters(), lr=0.1,momentum=0.9)\n",
         "lr_scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer,gamma=0.95)"
@@ -714,7 +712,7 @@
       "metadata": {
         "id": "gyLrCA5Cjm5V"
       },
-      "execution_count": 75,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -726,7 +724,7 @@
       "metadata": {
         "id": "RpNsZzZoj5Jk"
       },
-      "execution_count": 101,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -738,7 +736,7 @@
       "metadata": {
         "id": "LvSqcMeBj9L9"
       },
-      "execution_count": 81,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -749,7 +747,7 @@
       "metadata": {
         "id": "ue5nfUUGLEDA"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -785,7 +783,7 @@
       "metadata": {
         "id": "XT3JS3i7j_aL"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -808,7 +806,7 @@
         "id": "tAp3cB-nkDaG",
         "outputId": "07cfaa2c-49ac-489d-c30e-d53d9c577450"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1947,7 +1945,132 @@
       "metadata": {
         "id": "KV5Kx4riZsY6"
       },
-      "execution_count": 103,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Testing "
+      ],
+      "metadata": {
+        "id": "N9GUJd21-dwK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.load_state_dict(torch.load('/content/drive/MyDrive/GNN_HIV/models/gcn/model-hiv-500epochs.pt',map_location = torch.device('cpu')))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vSjXHYpo-ka2",
+        "outputId": "12ee2a94-e592-40c2-8723-d1a58aede3e2"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.eval()\n",
+        "with torch.no_grad():\n",
+        "  test_preds = []\n",
+        "  test_labels = []\n",
+        "  running_loss = 0.0\n",
+        "  steps =0 \n",
+        "  for _, batch in enumerate(tqdm(train_loader)):\n",
+        "    batch.to('cpu')\n",
+        "    pred = model(batch.x.float(),batch.edge_index, batch.batch)\n",
+        "    # print(batch.y)\n",
+        "    loss = loss_fn(pred, batch.y)\n",
+        "    test_preds.append(np.argmax(pred.cpu().detach().numpy(),axis=1))\n",
+        "    test_labels.append(batch.y.cpu().detach().numpy())\n",
+        "    running_loss += loss.item()\n",
+        "    steps+=1\n",
+        "  test_preds = np.concatenate(test_preds).ravel()\n",
+        "  test_labels = np.concatenate(test_labels).ravel()\n",
+        "  acc= accuracy_score(test_labels, test_preds)\n",
+        "  print(f'\\nTest Loss : {running_loss/steps}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZgRBm_Mm-fvQ",
+        "outputId": "02e2d918-3bce-4400-be38-000a2606045f"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 280/280 [01:45<00:00,  2.67it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Test Loss : 0.13925306624067682\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(acc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rWs6D4WCA-Zl",
+        "outputId": "2a94da9c-67b0-42fe-b785-4a15515d98d0"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.8284753050227546\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "xmSvVyXeCm7j"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
