added EDA for text

--- a/TextGCNs/Crawlscript_Text_GCN.ipynb
+++ b/TextGCNs/Crawlscript_Text_GCN.ipynb
@@ -34,12 +34,12 @@
       ],
       "metadata": {
         "id": "9EktHzxEzONR",
-        "outputId": "d215cf9b-4e39-4471-b367-6e10e61a69f6",
+        "outputId": "afaaba70-133b-4aa6-b828-e7841e0228a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,17 +66,58 @@
       ],
       "metadata": {
         "id": "J-UC6Sdg0OgW",
-        "outputId": "a7c2b6b1-106f-4d0f-b51c-e8ba0f7a7f03",
+        "outputId": "b636a319-a74d-468c-e8a4-14ca043521f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Collecting tf_geometric\n",
+            "  Downloading tf_geometric-0.0.81.tar.gz (57 kB)\n",
+            "\u001b[?25l\r\u001b[K     |█████▊                          | 10 kB 29.0 MB/s eta 0:00:01\r\u001b[K     |███████████▌                    | 20 kB 9.9 MB/s eta 0:00:01\r\u001b[K     |█████████████████▏              | 30 kB 8.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 40 kB 3.6 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 51 kB 4.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 57 kB 2.4 MB/s \n",
+            "\u001b[?25hCollecting tf_sparse>=0.0.10\n",
+            "  Downloading tf_sparse-0.0.10.tar.gz (9.0 kB)\n",
+            "Requirement already satisfied: numpy>=1.17.4 in /usr/local/lib/python3.7/dist-packages (from tf_geometric) (1.21.5)\n",
+            "Requirement already satisfied: networkx>=2.1 in /usr/local/lib/python3.7/dist-packages (from tf_geometric) (2.6.3)\n",
+            "Requirement already satisfied: scipy>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from tf_geometric) (1.4.1)\n",
+            "Requirement already satisfied: scikit-learn>=0.22 in /usr/local/lib/python3.7/dist-packages (from tf_geometric) (1.0.2)\n",
+            "Collecting ogb_lite>=0.0.3\n",
+            "  Downloading ogb_lite-0.0.3.tar.gz (25 kB)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from tf_geometric) (4.63.0)\n",
+            "Requirement already satisfied: pandas>=0.24.0 in /usr/local/lib/python3.7/dist-packages (from ogb_lite>=0.0.3->tf_geometric) (1.3.5)\n",
+            "Requirement already satisfied: six>=1.12.0 in /usr/local/lib/python3.7/dist-packages (from ogb_lite>=0.0.3->tf_geometric) (1.15.0)\n",
+            "Requirement already satisfied: urllib3>=1.24.0 in /usr/local/lib/python3.7/dist-packages (from ogb_lite>=0.0.3->tf_geometric) (1.24.3)\n",
+            "Collecting outdated>=0.2.0\n",
+            "  Downloading outdated-0.2.1-py3-none-any.whl (7.5 kB)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from outdated>=0.2.0->ogb_lite>=0.0.3->tf_geometric) (2.23.0)\n",
+            "Collecting littleutils\n",
+            "  Downloading littleutils-0.2.2.tar.gz (6.6 kB)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->ogb_lite>=0.0.3->tf_geometric) (2018.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->ogb_lite>=0.0.3->tf_geometric) (2.8.2)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.22->tf_geometric) (3.1.0)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.22->tf_geometric) (1.1.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->outdated>=0.2.0->ogb_lite>=0.0.3->tf_geometric) (2021.10.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->outdated>=0.2.0->ogb_lite>=0.0.3->tf_geometric) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->outdated>=0.2.0->ogb_lite>=0.0.3->tf_geometric) (2.10)\n",
+            "Building wheels for collected packages: tf-geometric, ogb-lite, tf-sparse, littleutils\n",
+            "  Building wheel for tf-geometric (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for tf-geometric: filename=tf_geometric-0.0.81-py3-none-any.whl size=83616 sha256=addfcdcd187ef2dad1b14cb86520842ce5b203ec7d5c09a68d6b56d96fcf30b9\n",
+            "  Stored in directory: /root/.cache/pip/wheels/15/96/bd/40006d7b40d830014b65c59b8494145713b9ac9236f04e678e\n",
+            "  Building wheel for ogb-lite (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for ogb-lite: filename=ogb_lite-0.0.3-py3-none-any.whl size=33524 sha256=dc3130f4d5978d0878903316ed3f9bc9a9e5e2df59594e9d2b196e433bc4eab0\n",
+            "  Stored in directory: /root/.cache/pip/wheels/bb/98/b1/5d034ba69940a93aa9b8e05f6e2f630f47b045209bc3cfa210\n",
+            "  Building wheel for tf-sparse (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for tf-sparse: filename=tf_sparse-0.0.10-py3-none-any.whl size=8412 sha256=d23b57b1baf44a2c092348195005efb0358d7f80fd31087d391d0dcfd1c02430\n",
+            "  Stored in directory: /root/.cache/pip/wheels/00/a8/f3/d2bbee94f874cd00b6be8e70da2493e84e9a4775944d913728\n",
+            "  Building wheel for littleutils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for littleutils: filename=littleutils-0.2.2-py3-none-any.whl size=7048 sha256=28a8af0ba8fb5bf36bd04c159d7fffdc5b085cdc728f01fb8415f8beda1b4a76\n",
+            "  Stored in directory: /root/.cache/pip/wheels/d6/64/cd/32819b511a488e4993f2fab909a95330289c3f4e0f6ef4676d\n",
+            "Successfully built tf-geometric ogb-lite tf-sparse littleutils\n",
             "Installing collected packages: littleutils, outdated, tf-sparse, ogb-lite, tf-geometric\n",
             "Successfully installed littleutils-0.2.2 ogb-lite-0.0.3 outdated-0.2.1 tf-geometric-0.0.81 tf-sparse-0.0.10\n"
           ]
@@ -85,11 +126,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "f2k_1-d2w90l"
+        "id": "f2k_1-d2w90l",
+        "outputId": "3d52b855-e9b5-4138-b487-5b50b210198f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/scipy/fft/__init__.py:97: DeprecationWarning: The module numpy.dual is deprecated.  Instead of using dual, use the functions directly from numpy or scipy.\n",
+            "  from numpy.dual import register_func\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/sparse/sputils.py:17: DeprecationWarning: `np.typeDict` is a deprecated alias for `np.sctypeDict`.\n",
+            "  supported_dtypes = [np.typeDict[x] for x in supported_dtypes]\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/special/orthogonal.py:81: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+            "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+            "  from numpy import (exp, inf, pi, sqrt, floor, sin, cos, around, int,\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/special/orthogonal.py:81: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+            "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+            "  from numpy import (exp, inf, pi, sqrt, floor, sin, cos, around, int,\n",
+            "/usr/local/lib/python3.7/dist-packages/scipy/io/matlab/mio5.py:98: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
+            "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+            "  from .mio5_utils import VarReader5\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "from tf_geometric.utils import tf_utils\n",
@@ -142,8 +235,38 @@
       "metadata": {
         "id": "RidKM2uFxeJl"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "texts[:5]"
+      ],
+      "metadata": {
+        "id": "0hCH7NTus9UC",
+        "outputId": "7a055790-b0f9-4b6a-fafb-280188f9b134",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['the rock is destined to be the 21st century\\'s new \" conan \" and that he\\'s going to make a splash even greater than arnold schwarzenegger , jean-claud van damme or steven segal .',\n",
+              " 'the gorgeously elaborate continuation of \" the lord of the rings \" trilogy is so huge that a column of words cannot adequately describe co-writer/director peter jackson\\'s expanded vision of j . r . r . tolkien\\'s middle-earth .',\n",
+              " 'effective but too-tepid biopic',\n",
+              " 'if you sometimes like to go to the movies to have fun , wasabi is a good place to start .',\n",
+              " \"emerges as something rare , an issue movie that's so honest and keenly observed that it doesn't feel like one .\"]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -157,7 +280,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +351,7 @@
       "metadata": {
         "id": "oorDFMHt1hoy"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +387,7 @@
       "metadata": {
         "id": "T6OkZt-W1rMb"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,7 +413,7 @@
       "metadata": {
         "id": "DSCT9ykD2mJp"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +448,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +482,7 @@
       "metadata": {
         "id": "u6zVjRNd2r2M"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -387,7 +510,7 @@
       "metadata": {
         "id": "ko12FT-v3PcN"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -404,7 +527,7 @@
       "metadata": {
         "id": "auhu2FtG3SZZ"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +538,7 @@
       "metadata": {
         "id": "3koCRTwC3fxy"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -444,7 +567,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
